<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dashboard"
        android:text="@string/dashboard"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:padding="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="20sp"
        android:padding="18sp"
        android:backgroundTint="#EF069A"
        app:layout_constraintStart_toEndOf="@+id/dashboard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectNewCar"
        android:text="@string/selectNewCar"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="15sp"
        android:padding="10sp"
        app:layout_constraintTop_toBottomOf="@id/dashboard"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectMake"
        android:text="@string/selectMake"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:layout_marginStart="20sp"
        android:layout_marginTop="7sp"
        android:layout_marginEnd="20sp"
        android:padding="20sp"
        android:backgroundTint="#CACED3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectNewCar"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectModel"
        android:text="@string/selectModel"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:layout_marginStart="20sp"
        android:layout_marginTop="7sp"
        android:layout_marginEnd="20sp"
        android:padding="20sp"
        android:backgroundTint="#CACED3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectMake"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addCar"
        android:text="@string/addCar"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:layout_marginStart="20sp"
        android:layout_marginTop="7sp"
        android:layout_marginEnd="20sp"
        android:padding="20sp"
        android:backgroundTint="#699DDC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectModel"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yourCars"
        android:text="@string/yourCars"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="22sp"
        android:layout_marginTop="15sp"
        android:padding="10sp"
        app:layout_constraintTop_toBottomOf="@id/addCar"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toBottomOf="@id/yourCars"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>