<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3sp"
        android:layout_marginStart="3sp"
        android:layout_marginEnd="3sp"
        android:padding="3sp"
        android:background="@color/recycle_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:layout_width="115sp"
            android:layout_height="110sp"
            android:id="@+id/updateImage"
            android:padding="3sp"
            android:src="@drawable/img"
            android:scaleType="fitXY"
            android:contentDescription="@string/car_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/carMakeView"
                android:text="@string/car_make_view"
                android:textColor="@color/black"
                android:layout_margin="3sp"
                android:padding="3sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/carModelView"
                android:text="@string/car_model_view"
                android:textColor="@color/black"
                android:layout_margin="3sp"
                android:padding="3sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addCarImage"
                    android:text="@string/add_image"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:layout_margin="3sp"
                    android:padding="3sp"
                    android:backgroundTint="#699DDC"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/deleteCar"
                    android:text="@string/delete"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:layout_margin="3sp"
                    android:padding="3sp"
                    android:backgroundTint="#EF069A"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>